<resources>
    <string name="app_name">Time In</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="hint_nome">Nome:</string>
    <string name="hint_data">Data de nascimento:</string>
    <string name="hint_email">E-mail:</string>
    <string name="hint_senha">Senha:</string>
    <string name="hint_confirmar_senha">Confirmar senha:</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="hint_nome_evento">Nome do evento:</string>
    <string name="hint_descricao_evento">Descrição:</string>
    <string name="hint_preco_inscricao">Preço da inscrição:</string>
    <string name="hint_real_cifrao">R$:</string>
    <string name="hint_publico_alvo">Público-Alvo:</string>
    <string name="hint_data_evento">Data do evento:</string>
    <string name="hint_horario_inicial_evento">Horário inicial:</string>
    <string name="hint_horario_final_evento">Horário final:</string>
    <string name="hint_capacidade_maxima">Capacidade máxima:</string>
    <string name="hint_capacidade_minima">Capacidade mínima:</string>
    <string name="hint_senha_antiga">Senha antiga:</string>
    <string name="hint_nova_senha">Nova senha:</string>
    <string name="hint_confirmar_senha_nova">Confimar nova senha:</string>
    <string name="btn_editar_informacoes">Editar informações</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_inscrever">Inscrever</string>
    <string name="btn_ver_incritos">Ver Inscritos</string>
    <string name="txt_alterar_senha">Alterar Senha</string>
    <string name="txt_alterar">Alterar</string>
    <string name="txt_filtrar">Filtrar</string>
    <string name="txt_ordenar">Ordenar por preço</string>
    <string name="txt_preco">Preço:</string>
    <string name="txt_telefone">Telefone:</string>
    <string name="txt_estado">Estado:</string>
    <string name="txt_cidade">Cidade:</string>
    <string name="txt_bairro">Bairro:</string>
    <string name="txt_desinscrever">Desinscrever</string>
    <string name="txt_em_cifrao">Em R$:</string>
    <string name="txt_idade">Idade</string>
    <string name="txt_intuito">Intuito</string>
    <string name="txt_horario">Horário</string>
    <string name="txt_localizacao">Localização</string>
    <string name="txt_raio">Raios de (Km):</string>
    <string name="txt_data">Data</string>
    <string name="btn_padrao">Padrão</string>
    <string name="btn_preco_menor">Preço: do menor para o maior</string>
    <string name="btn_preco_maior">Preço: do menor para o maior</string>
    <string name="btn_ate_12">Até 12 anos</string>
    <string name="btn_13_17">13 - 17 anos</string>
    <string name="btn_mais_18">18+</string>
    <string name="btn_mais_30">30+</string>
    <string name="btn_familia">Família</string>
    <string name="btn_amador">Amador</string>
    <string name="btn_profissional">Profissional</string>
    <string name="btn_manha">Manhã</string>
    <string name="btn_tarde">Tarde</string>
    <string name="btn_noite">Noite</string>
    <string name="btn_hoje">Hoje</string>
    <string name="btn_semana">Esta semana</string>
    <string name="btn_mes">Este mês</string>
    <string name="hint_de">De:</string>
    <string name="hint_ate">Até:</string>
    <string name="btn_escolher_foto">Escolher foto</string>
    <string name="txt_cancela_inscricao">Quer realmente cancelar a inscrição?</string>
    <string name="txt_excluir_evento">Quer realmente excluir o evento?</string>
    <string name="btn_confirma_inscricao">Confirmar Inscrição</string>
    <string name="txt_escolha_intuito">Escolha seu intuito:</string>
    <string name="btn_criar_evento">Criar Evento</string>
    <string name="btn_editar_evento">Editar evento</string>
    <string name="btn_eventos_inscritos">Eventos inscritos</string>
    <string name="btn_eventos_criados">Eventos criados</string>
    <string name="btn_cadastrar_evento">Cadastrar Evento</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_entrar_convidado">Entrar como convidado</string>
    <string name="btn_criar_conta">Criar Conta</string>
    <string name="txt_nao_possui_conta">Não possui uma conta?</string>
    <string name="topico_info_geral">Informações Gerais</string>
    <string name="topico_endereco">Localização</string>
    <string name="txt_endereco">Endereço:</string>
    <string name="topico_info_final">Informações Finais</string>
    <string name="txt_cep">CEP:</string>
    <string name="verifica_cep">Verificar CEP</string>
    <string name="txt_numero">⠀Numero:</string>
    <string name="txt_esporte">Esporte:</string>
    <string name="txt_vagas_rest">Vagas restantes:</string>
    <string name="txt_criador">Criador:</string>
    <string name="txt_intuito_do_evento">Intuito do evento:</string>
    <string name="txt_idade_do_publico">Idade do público:</string>
    <string name="txt_evento_intuito">Intuito:</string>
    <string name="txt_deslogar">Encerrar sessão</string>

    <string-array name="array_estados">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string-array name="sim_nao">
        <item>Sim</item>
        <item>Não</item>
    </string-array>


    <string-array name="intuito_event">
        <item>Família</item>
        <item>Amador</item>
        <item>Profissional</item>
    </string-array>


    <string-array name="idade_public">
        <item>De 3 a 7</item>
        <item>De 8 a 13</item>
        <item>De 17 a 20</item>
        <item>Acima de 18</item>
        <item>De 20 a 30</item>
        <item>De 30 a 40</item>
        <item>Acima de 40</item>
    </string-array>

    <string-array name="esportes">
        <item>Atletismo</item>
        <item>Automobilismo</item>
        <item>Basquete</item>
        <item>Beach Tennis</item>
        <item>Bicicross</item>
        <item>Boxe</item>
        <item>Capoeira</item>
        <item>Canoagem</item>
        <item>Corrida</item>
        <item>Ciclismo</item>
        <item>Escalada Esportiva</item>
        <item>Futebol</item>
        <item>Futebol Americano</item>
        <item>Futsal</item>
        <item>Ginástica Artística</item>
        <item>Handebol</item>
        <item>Hipismo</item>
        <item>Hóquei em Patins</item>
        <item>Jiu-Jitsu</item>
        <item>Judô</item>
        <item>Kitesurf</item>
        <item>Levantamento de Peso</item>
        <item>Mergulho</item>
        <item>MMA</item>
        <item>Motocross</item>
        <item>Mountain Bike</item>
        <item>Natação</item>
        <item>Natação Sincronizada</item>
        <item>Pentatlo Moderno</item>
        <item>Polo Aquático</item>
        <item>Remo</item>
        <item>Rugby</item>
        <item>Rugby em Cadeira de Rodas</item>
        <item>Skate</item>
        <item>Surfe</item>
        <item>Surfe de Remo</item>
        <item>Taekwondo</item>
        <item>Tênis</item>
        <item>Tênis de Mesa</item>
        <item>Tiro Esportivo</item>
        <item>Triatlo</item>
        <item>Vôlei</item>
        <item>Vôlei de Praia</item>
        <item>Vôlei Sentado</item>
        <item>Xadrez</item>
        <item>Outro</item>
    </string-array>

    <string-array name="preco_filtro">
        <item>Nenhum</item>
        <item>R$0,00 - R$10,00</item>
        <item>R$10,00 - R$20,00</item>
        <item>R$20,00 - R$30,00</item>
        <item>R$30,00 - R$50,00</item>
        <item>R$50,00 - R$100,00</item>
        <item>R$100,00 - R$200,00</item>
        <item>R$200,00 - R$500,00</item>
        <item>R$500,00 - R$1000,00</item>
        <item>R$1000,00 - R$5000,00</item>
    </string-array>

    <string-array name="idade_filtro">
        <item>Nenhum</item>
        <item>De 3 a 7</item>
        <item>De 8 a 13</item>
        <item>De 14 a 16</item>
        <item>De 17 a 20</item>
        <item>Acima de 18</item>
        <item>De 20 a 30</item>
        <item>De 30 a 40</item>
        <item>Acima de 40</item>
    </string-array>

    <string-array name="intuito_filtro">
        <item>Nenhum</item>
        <item>Família</item>
        <item>Profissional</item>
        <item>Amador</item>
    </string-array>

    <string-array name="preco2_filtro">
        <item>Nenhum</item>
        <item>Do menor para o maior</item>
        <item>Do maior para o menor</item>
    </string-array>

</resources>