<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditarPerfilActivity" >

    <EditText
        android:id="@+id/etDataEditarPerfil2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_data"
        android:inputType="date"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailEditarPerfil2" />

    <EditText
        android:id="@+id/etEditarPerfilTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txt_telefone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataEditarPerfil2" />

    <EditText
        android:id="@+id/etEmailEditarPerfil2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtnFotoPerfil2"
        app:layout_constraintTop_toBottomOf="@+id/etNomeEditarPerfil2" />

    <EditText
        android:id="@+id/etNomeEditarPerfil2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtnFotoPerfil2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgbtnFotoPerfil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/addfoto" />

    <Button
        android:id="@+id/btnAlterarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/verde_escuro"
        android:text="@string/txt_alterar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgEditarIntuito"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditarPerfilTelefone">

        <TextView
            android:id="@+id/tvEscolhaIntuito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_escolha_intuito"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbEditarFamilia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_familia" />

        <RadioButton
            android:id="@+id/rbEditarProfissional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_profissional" />

        <RadioButton
            android:id="@+id/rbEditarAmador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_amador" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>