<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataEditarPerfil2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_alterar_senha"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etSenhaAntiga"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:hint="@string/hint_senha"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etSenhaNova"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:hint="@string/hint_nova_senha"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etConfimarSenha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:hint="@string/hint_confirmar_senha_nova"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>