<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Activities.EditarEventoActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etEditarNomeEvento"
                android:layout_width="370dp"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:paddingLeft="7dp"
                android:hint="@string/hint_nome_evento"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etEditarCapMaxima"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:paddingLeft="7dp"
                android:hint="@string/hint_capacidade_maxima"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etEditarCapMin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:paddingLeft="7dp"
                android:hint="@string/hint_capacidade_minima"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/etEditarDesc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/campo_evento"
                android:ems="10"
                android:paddingLeft="7dp"
                android:gravity="start|top"
                android:hint="@string/hint_descricao_evento"
                android:inputType="textMultiLine" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnEditarEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/btn_editar_evento" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

    </LinearLayout>
</ScrollView>

</FrameLayout>